--- a/database_api/README
+++ b/database_api/README
@@ -3,3 +3,5 @@ Nessa seção você vai encontrar as bases para um API que será utilizado para 
 database.py - script que vai interagir diretamente com a database
 pessoas.ods - arquivo ods com as informações mais importantes da nossa database
 pessoa.json - arquivo usado para inputar informação na database, contém um exemplo de uso da database
+index.php - Arquivo html/php com uma página de 'boas vindas', no momento é mais um placeholder do que 
+            qualquer outra, mas futuramente, com o uso da sintaxe jinjax, talvez façamos algo legal.
